<resources>
    <string name="app_name">AI书法大师</string>
    <string name="copybook_image_view_text">字帖库</string>
    <string name="genbook_image_view_text">字帖生成</string>
    <string name="genpaint_image_view_text">国画生成</string>
    <string name="mine_image_view_text">我</string>
    <string name="generate_copybook">生成碑帖</string>
    <string name="practice">练习</string>
    <string name="test_copybook">辨识字体</string>
    <string name="look_more">查看碑帖</string>
    <string name="collection_copybook">收藏碑帖</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_input_poem">请输入要生成的诗词</string>
    <string name="generate">生成</string>
    <string name="yanzhenqin">颜真卿</string>
    <string name="liugongquan">柳公权</string>
    <string name="zhaomengfu">赵孟頫</string>
    <string name="ouyangxun">欧阳询</string>
    <string name="commit">提交</string>
    <string name="style_transfer">风格迁移</string>
    <string name="child">书画初学者</string>
    <string name="mid">书画中级者</string>
    <string name="old">书画高手</string>
    <string name="jump">跳过</string>
    <string name="start_camera">拍照</string>
    <string name="eval_calligrphy">字体评估</string>
    <string name="get_from_album">从相册选取</string>
</resources>
