<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp">

        <ImageView
            android:id="@+id/test_word_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitXY" />
    </android.support.v7.widget.CardView>

    <RadioGroup
        android:id="@+id/author_rbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yanzhenqin_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yanzhenqin" />

        <RadioButton
            android:id="@+id/liugongquan_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liugongquan" />


        <RadioButton
            android:id="@+id/zhaomengfu_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhaomengfu" />

        <RadioButton
            android:id="@+id/ouyangxun_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ouyangxun" />

    </RadioGroup>

    <Button
        android:id="@+id/test_commit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape_normal"
        android:text="@string/commit"
        android:textColor="@android:color/white" />


</LinearLayout>