<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/guidebg"
    android:orientation="vertical">

    <Button
        android:id="@+id/guide_login_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_shape_normal"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/guide_register_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_shape_white"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <Button
        android:id="@+id/guide_jump_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:background="@drawable/button_shape_normal"
        android:text="@string/jump"
        android:textColor="@color/white"
        android:textSize="16sp" />


</FrameLayout>