<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RelativeLayout
            android:id="@+id/copybook_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/copybook_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/comui_tab_copybook_selected" />

            <TextView
                android:id="@+id/copybook_image_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/copybook_image_view"
                android:layout_centerHorizontal="true"
                android:text="@string/copybook_image_view_text"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/genbook_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/genbook_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/comui_tab_genbook" />

            <TextView
                android:id="@+id/genbook_image_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genbook_image_view"
                android:layout_centerHorizontal="true"
                android:text="@string/genbook_image_view_text"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/genpaint_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/genpaint_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/comui_tab_genpaint" />

            <TextView
                android:id="@+id/genpaint_image_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genpaint_image_view"
                android:layout_centerHorizontal="true"
                android:text="@string/genpaint_image_view_text"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/mine_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/comui_tab_mine" />

            <TextView
                android:id="@+id/mine_image_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mine_image_view"
                android:layout_centerHorizontal="true"
                android:text="@string/mine_image_view_text"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>