<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v7.widget.CardView

        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorAccentLow"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp">

        <ImageView
            android:id="@+id/camera_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/colorAccentLow"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="最相似书法家：欧阳询" />

            <TextView
                android:id="@+id/prob_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="相似程度：50.4%" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/start_camera_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_shape_normal"
        android:text="@string/start_camera"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/get_from_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_shape_normal"
        android:text="@string/get_from_album"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/get_eval_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape_normal"
        android:text="@string/eval_calligrphy"
        android:textColor="@android:color/white" />

</LinearLayout>